--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 include "spock-core"
 include "spock-guice"
 include "spock-maven"
+include "spock-report"
 include "spock-specs"
 include "spock-spring"
 include "spock-tapestry"
