--- a/spock-report/report.gradle
+++ b/spock-report/report.gradle
@@ -2,7 +2,7 @@ apply from: script("publishMaven")
 
 displayName = "Spock Framework - Report Module"
 
-description = "Generates HTML reports that read like a specification."
+description = "Interactive, specification-style HTML reports for Spock specifications."
 
 dependencies {
   compile project(":spock-core")
