--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: "base"
+apply plugin: "sonar"
 
 description = "Spock Framework"
 
@@ -102,7 +103,7 @@ task apidoc(dependsOn: ["javadoc", "groovydoc"])
 configureGroovydoc(groovydoc)
 
 task wrapper(type: Wrapper) {
-  gradleVersion = "1.3"
+  gradleVersion = "1.5-20130118002330+0000"
 }
 
 File script(String name) {
