--- a/spock-report/report.gradle
+++ b/spock-report/report.gradle
@@ -10,3 +10,5 @@ dependencies {
   //compile "com.fasterxml.jackson.core:jackson-core:2.1.2"
   //compile "com.fasterxml.jackson.core:jackson-databind:2.1.2"
 }
+
+sonar.project.skip = true
