--- a/spock-specs/specs.gradle
+++ b/spock-specs/specs.gradle
@@ -1,3 +1,7 @@
+sonarRunner {
+  skipProject = true
+}
+
 displayName = "Spock Framework - Specs for Core Module"
 
 description = "Spock specifications for the Core Module. Yes, we eat our own dog food."
@@ -10,4 +14,3 @@ dependencies {
   testRuntime libs.h2database
 }
 
-sonar.project.language = "grvy"
