--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ ext {
     asm: "asm:asm:3.2", // use same version as Groovy 1.8
     cglib: "cglib:cglib-nodep:2.2.2",
     easymock: "org.easymock:easymock:3.0",
-    groovy: "org.codehaus.groovy:groovy-all:1.8.8",
+    groovy: "org.codehaus.groovy:groovy-all:1.8.9",
     h2database: "com.h2database:h2:1.3.164",
     jmock: "org.jmock:jmock:2.5.1",
     jmock_junit4: "org.jmock:jmock-junit4:2.5.1",
@@ -48,7 +48,7 @@ subprojects {
   }
 
   dependencies {
-    groovy libs.groovy
+    groovy(project.name == "spock-gradle" ? [] : libs.groovy)
   }
 
   signing {
