--- a/spock-tapestry/tapestry.gradle
+++ b/spock-tapestry/tapestry.gradle
@@ -10,12 +10,13 @@ repositories {
   maven { url "http://repository.jboss.com/maven2" }
 }
 
-// 5.3.x seems to require Java 1.6 (evidence: org.apache.tapestry5.ioc.internal.util.InternalUtils makes direct use of @PostConstruct)
-def tapestryVersion = System.getProperty("java.version").startsWith("1.5") ? "5.2.6" : "5.3.2"
+def tapestryVersion = "5.1.0.1"
 
 dependencies {
   compile project(":spock-core")
   compile "org.apache.tapestry:tapestry-ioc:$tapestryVersion", provided
   compile "org.apache.tapestry:tapestry5-annotations:$tapestryVersion", provided
+
+  testCompile "javax.inject:javax.inject:1"
 }
 
