--- a/spock-specs/specs.gradle
+++ b/spock-specs/specs.gradle
@@ -58,3 +58,8 @@ gradle.addListener(new TaskExecutionListener() {
     }
   }
 })
+
+task(console, dependsOn: 'classes', type: JavaExec) {
+  main = 'groovy.ui.Console'
+  classpath = sourceSets.test.runtimeClasspath
+}
