Add groovy console support for the tests, to allow debugging of the AST.

--- a/spock-specs/specs.gradle
+++ b/spock-specs/specs.gradle
@@ -57,3 +57,8 @@ gradle.addListener(new TaskExecutionListener() {
     }
   }
 })
+
+task(console, dependsOn: 'classes', type: JavaExec) {
+  main = 'groovy.ui.Console'
+  classpath = sourceSets.test.runtimeClasspath
+}
