polished groovyConsole task

--- a/spock-specs/specs.gradle
+++ b/spock-specs/specs.gradle
@@ -59,7 +59,7 @@ gradle.addListener(new TaskExecutionListener() {
   }
 })
 
-task(console, dependsOn: 'classes', type: JavaExec) {
+task groovyConsole(type: JavaExec) {
   main = 'groovy.ui.Console'
   classpath = sourceSets.test.runtimeClasspath
 }
